# Email-Sync-Clean

./: .clocignore  .envrc  .flake8  .gitignore  .mcp.json  .mcp.json.template  .pre-commit-config.yaml  0719 surprise eviction notice copy.txt  AGENTS.md  CHANGELOG.md  CHRO_TIMELINE_REPORT.jsonl  CLAUDE.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY.txt  COMPREHENSIVE_LEGAL_VIOLATIONS_REPORT.md  COMPREHENSIVE_REFACTORING_PLAN.md  DEAD_CODE_AUDIT.md  DEPENDENCY_ANALYSIS_REPORT.md  DOCUMENTATION_INDEX.md  Email Sync.code-workspace  GET_STARTED.md  Google document AI - notes  INGESTION_FROZEN.txt  INVESTIGATION_FINDINGS.md  LEGAL_ANALYSIS_STRATEGY.md  Makefile  OPTIMIZED_MCP_CONFIG.json  PIPELINE_REMOVAL_LOG.md  PROJECT_REBUILD_MANUAL.md  README.md  SANITATION_COMPLETE.md  SEMANTIC_SEARCH_AUDIT.md  SEMANTIC_SEARCH_ROLLBACK_PLAN.md  SETUP_COMPLETE.md  SIMPLE_DIRECT_PROCESSING.md  SLASH.md  SMART_ANALYSIS_BRAINSTORM.md  STANDALONE_README.md  SYSTEM_AUDIT.md  SYSTEM_AUDIT_CORRECTED.md  (+48 more)
.benchmarks/: baseline_v1_20250826_094520.json
.claude/: SEARCH_INSTRUCTIONS.md  danger.md  mcp.json  settings.json  setup_search_alias.sh
.config/: .coveragerc  .markdownlint.json  .mcpignore  .pre-commit-config.yaml  .radon.cfg  cache_config.sh  claude_desktop_config.json  feature_flags.json  mypy.ini  pre-commit-config.yaml  pyrightconfig.json  pytest.ini
.github/: pull_request_template.md
.sonarlint/: sonarlint.json
.taskmaster/: CLAUDE.md  TASK_COMPLETION_CHECKLIST.md  TASK_COMPLETION_SUMMARY.md  config.json  state.json
ARCHIVE/: final_cleanup_log.json
Archive 08242025/: consolidate_pdfs_local.py  document_ai_cli.py  process_document.py  simple_legal_cleaner.py  standalone_boilerplate_remover.py  test_document_ai.py
Archive_BigQuery_20250824/: Google document AI - notes  list_processors.py  process_one_pdf.py  segregation_log.json
Stoneman_dispute/: email thread MOLD Dispute copy.txt  litigation_defect_checklist.md  mold dispute summary copy.txt  s520 3rd part copy.txt  search_analysis_report.md
adapters/: README.md  SHIM_INVENTORY.md  __init__.py  email_thread_adapter.py  schema_adapter.py  vector_maintenance_adapter.py
analog_db/: CHRO_extracted_timeline.md  README.md  __init__.py  content_search.py  metadata_search.py  search_interface.py  vector_search.py
archive/: ARCHIVE_NOTES.md
bench/: bench_simpledb.py  last_run.json
cli/: __main__.py  admin.py  db.py  embed.py  entity.py  index.py  info.py  legal.py  search.py  upload.py  view.py
config/: settings.py
data/: README.md  emails.db-shm  emails.db-wal  emails.db.backup-2025-08-19-024724
deprecated/: DEPRECATED_NOTES.md
docs/: .mcp.json.backup-1755472304927  .mcp.json.backup_20250816_131800  .mcp.json.full  .mcp.json.optimized  ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  AUTOMATED_CLEANUP.md  Best Practices.md  CLEANUP_QUICK_REFERENCE.md  CODE_TRANSFORMATION_TOOLS.md  COMMAND_REFERENCE.md  CONFIGURATION.md  DATABASE_SCHEMA.md  DEVELOPMENT_TOOLS.md  DIAGNOSTIC_SYSTEM.md  ENTITY_EXTRACTION_INTEGRATION.md  EXTERNAL_ID_CONVENTIONS.md  IDEAS_LEGAL_DOMAIN_LOGIC.md  KNOWLEDGE_GRAPH.md  LEGAL_BERT_DOCUMENTATION.md  LOGURU_MIGRATION_PLAN_ENHANCED.md  MCP_SERVERS.md  MIGRATION_CHECKLIST_V2.md  MIGRATION_GUIDE.md  OCR_SYSTEM_ANALYSIS.md  PIPELINE_VERIFICATION.md  PROJECT_PHILOSOPHY.md  RECOMMENDED_DEPENDENCIES.md  SCHEMA_DECISIONS_V2.md  SERVICES_API.md  SYSTEM_STATUS.md  TASK_21_COMPLETION_REPORT.md  TECHNICAL_DEBT.md  TESTING.md  TESTING_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  TRACKER.md  ULTRATHINK_DESIGN.md  USER_GUIDE.md  VSEARCH.md  (+2 more)
email_parsing/: message_deduplicator.py
entity/: CLAUDE.md  config.py  database.py  main.py
exports/: emails_legacy_2025-08-28.sha256
gmail/: CLAUDE.md  __init__.py  config.py  config.py.test.backup  gmail_api.py  main.py  oauth.py  schema_updates.sql  storage.py  validators.py
infrastructure/: __init__.py
knowledge_graph/: CLAUDE.md  __init__.py  graph_queries.py  main.py  similarity_analyzer.py  similarity_analyzer.py.backup_20250821_185603  similarity_analyzer.py.bak  similarity_integration.py  similarity_integration.py.backup_20250821_185603  timeline_relationships.py  topic_clustering.py  topic_clustering.py.backup_20250821_185603  topic_clustering.py.bak
legacy/: __init__.py
legal_evidence/: __init__.py  evidence_lookup_20250820_045943.md  evidence_narrative_20250820_045943.md  (+4 more)
(+1039 files in other folders)
